# devops-prj

./: .gitignore  CLAUDE.md  Federated_Learning_Complete_All_Components.ipynb  Federated_Learning_Complete_Extended.ipynb  Federated_Learning_Complete_NoConflicts.ipynb  Federated_Learning_Drift_Detection_Colab.ipynb  Federated_Learning_Drift_Detection_Colab_Final.ipynb  Federated_Learning_Drift_Detection_Colab_Fixed.ipynb  Federated_Learning_Drift_Detection_Simple.ipynb  Federated_Learning_Ultra_Simple.ipynb  complete_fl_system.py
fl-drift-demo/: .gitignore  DEMO_GUIDE.md  EVALUATION_METRICS_BEGINNER_GUIDE.md  EVALUATION_METRICS_TECHNICAL_GUIDE.md  IMPLEMENTATION_SUMMARY.md  METRICS_IMPLEMENTATION_MAP.md  PHASE1_COMPLETION_SUMMARY.md  PHASE1_IMPLEMENTATION_PLAN.md  PROJECT_PRESENTATION.md  README.md  debug_mutex.py  demo_adwin.ipynb  demo_mmd.ipynb  fix_dependencies.sh  fix_environment_final.sh  get_real_metrics.py  install_dependencies.sh  main.py  main_no_ray.py  pyproject.toml  pyproject_mac_optimized.toml  rebuild_environment.sh  requirements.txt  test_minimal.py  validate_phase1.py  validate_setup.py
fl-drift-demo/claudedocs/: COMPREHENSIVE_TECHNICAL_DOCUMENTATION.md  RESEARCH_PAPER_DIAGRAMS.md
fl-drift-demo/docs/demo/: ARCHITECTURE_WALKTHROUGH.md
fl-drift-demo/fed_drift/: __init__.py  client.py  config.py  data.py  drift_detection.py  metrics_utils.py  models.py  server.py  simulation.py  simulation_no_ray.py
fl-drift-demo/tests/: __init__.py  test_data.py  test_drift_detection.py  test_phase1_metrics.py  test_server.py
(+1 files in other folders)
