[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fl-drift-demo"
version = "0.1.0"
description = "Federated LLM Drift Detection and Recovery System"
authors = [{name = "Rohit", email = "rohitrathi.in@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flwr[simulation]>=1.20.0",
    "transformers[torch]>=4.56.0",
    "datasets>=4.0.0",
    "torch>=2.8.0",
    "alibi-detect>=0.12.0",
    "evidently>=0.7.14",
    "river>=0.22.0",
    "nlpaug>=1.1.11",
    "scikit-learn>=1.7.0"
]

[tool.poetry]
name = "fl-drift-demo"
version = "0.1.0"
description = "Federated LLM Drift Detection and Recovery System"
authors = ["User <user@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flwr = {extras = ["simulation"], version = "^1.20.0"}
transformers = {extras = ["torch"], version = "^4.56.0"}
datasets = "^4.0.0"
torch = "^2.8.0"
torchvision = "^0.23.0"
torchaudio = "^2.8.0"
alibi-detect = "^0.12.0"
evidently = "^0.7.14"
river = "^0.22.0"
nlpaug = "^1.1.11"
scikit-learn = "^1.7.0"

[tool.flwr.run.simulation]
num_supernodes = 10
num_rounds = 50
num_cpus = 4
num_gpus = 0.25

[tool.flwr.run.simulation.client_resources]
num_cpus = 2
num_gpus = 0.1

[tool.flwr.app]
publisher = "user"

[tool.flwr.app.components]
serverapp = "fed_drift.simulation:app"
clientapp = "fed_drift.client:app"